DIAC-1211 - add changes