@@ -352,7 +352,11 @@ class CamundaTaskCompletionTest extends DmnDecisionTableBaseUnitTest {
                         "completionMode", "Auto",
                         "taskType", "reviewAriaRemissionApplication"
                     ),
-                    Collections.emptyMap()
+                    Collections.emptyMap(),
+                    Map.of(
+                        "taskType", "reviewASRemission",
+                        "completionMode", "Auto"
+                    )
                 )
             ),
             Arguments.of(
@@ -466,7 +470,7 @@ class CamundaTaskCompletionTest extends DmnDecisionTableBaseUnitTest {
 
         //The purpose of this test is to prevent adding new rows without being tested
         DmnDecisionTableImpl logic = (DmnDecisionTableImpl) decision.getDecisionLogic();
-        assertThat(logic.getRules().size(), is(45));
+        assertThat(logic.getRules().size(), is(46));
     }
 
 
